Fixed Overflow

--- a/static/scss/_config.scss
+++ b/static/scss/_config.scss
@@ -8,6 +8,9 @@ $orange: #FF7918;
 $purple-opacity: #b4b9e5c4;
 
 
+body{
+  overflow-x: hidden;
+}
 
 @mixin flex{
     display: flex;
